fix: prevent text size adjustment on mobile

--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -35,6 +35,7 @@
 }
 
 html {
+	-webkit-text-size-adjust: 100%;
 	font-family: 'Arial', sans-serif, 'Noto Color Emoji';
 	color: var(--text-primary);
 	background: var(--bg-primary);
